# sido

./: README.md  vrun_SI_GEN_3mm93_2.sh
codeletProbe/: measure.c
false_sharing/: README.md  fs.cpp
kmeans/: kmean_sido.py
lin_driver/: Makefile  README.md
lin_driver/inc/: su_kprobe_handler.h
lin_driver/src/: Makefile  aperf_mperf.c  su_kprobe_handler.c
lore/: benefiting.csv  unaffected.csv
matmul/: CMakeLists.txt  build_apps_mkl.sh  gemm.cpp
matmul-mkl/: CMakeLists.txt  Makefile  codelet.data  core.c  main.c  wrapper.c
matmul-var-data.c_de/: CMakeLists.txt  Makefile  build_and_run_matmul.sh  codelet.conf  wrapper.c
matmul-var-data.c_de/maqao_reports/: README.md  cqa_core.txt  cqa_loop1.txt  cqa_loop4.txt
matmul/include/: numerics.hpp
matmul/src/: CMakeLists.txt  gemm.cpp
samples/bit_manipulation/: bit_set_counter.cpp
samples/concurrency/: producer_consumer.cpp
samples/graph/: bst.cpp
samples/puzzles/: palindrome.cpp
samples/string/: long_sub_palindrome.cpp
samples/tbb/: Largest_k_elements.txt  heap_sort.cpp  nested_pfor_barrier.cpp  resumable_task_with_exception.cpp  sycl_vec_add.cpp
